Mobile compatibility tweaks

--- a/index.html
+++ b/index.html
@@ -29,49 +29,22 @@
       <div class="col-md-5 p-4">
         <section class="row cart align-content-start">
           <!-- Cart Header -->
-          <div class="col-md-6 cart-header">
+          <div class="col-6 cart-header">
             <p class="mb-0">Name</p>
           </div>
-          <div class="col-md-2 cart-header">
+          <div class="col-2 cart-header">
             <p class="mb-0">Qty</p>
           </div>
-          <div class="col-md-2 cart-header">
+          <div class="col-2 cart-header">
             <p class="mb-0">Each</p>
           </div>
-          <div class="col-md-2 cart-header">
+          <div class="col-2 cart-header">
             <p class="mb-0">Total</p>
           </div>
           <div class="col-12 cart-spacer"></div>
           <!-- Cart Items -->
           <div class="col-12">
-            <section class="row cart-items" id="cart-items">
-              <!-- <div
-                class="col-md-6 cart-item-alternate justify-content-start ps-4">
-                <p class="mb-0">strawberry</p>
-              </div>
-              <div class="col-md-2 cart-item-alternate justify-content-center">
-                <p class="mb-0">Qty</p>
-              </div>
-              <div class="col-md-2 cart-item-alternate justify-content-center">
-                <p class="mb-0">$Each</p>
-              </div>
-              <div class="col-md-2 cart-item-alternate justify-content-center">
-                <p class="mb-0">$Total</p>
-              </div>
-    
-              <div class="col-md-6 cart-item justify-content-start ps-4">
-                <p class="mb-0">raspberry</p>
-              </div>
-              <div class="col-md-2 cart-item justify-content-center">
-                <p class="mb-0">Qty</p>
-              </div>
-              <div class="col-md-2 cart-item justify-content-center">
-                <p class="mb-0">$Each</p>
-              </div>
-              <div class="col-md-2 cart-item justify-content-center">
-                <p class="mb-0">$Total</p>
-              </div> -->
-            </section>
+            <section class="row cart-items" id="cart-items"></section>
           </div>
           <!-- Payment Section of Cart -->
           <div class="col-12 cart-pay d-flex flex-column justify-content-center align-items-end p-2">
@@ -84,46 +57,24 @@
         <section class="row">
           <!-- Toppings -->
           <div class="col-12 mt-3">
-            <p class="font-rb">Toppings</p>
+            <p class="font-rb text-center text-md-start">Toppings</p>
           </div>
           <div class="col-12">
-            <section class="row" id="toppings">
-              <!-- <div class="col-md-4">
-                <div class="product">
-                  <img class="img-fluid" src="https://thiscatdoesnotexist.com" alt="">
-                  <p class="mb-0">Topping $<span id="price">2</span></p>
-                </div>
-              </div> -->
-            </section>
-
+            <section class="row" id="toppings"></section>
           </div>
           <!-- Vessels -->
           <div class="col-12 mt-3">
-            <p class="font-rb">Vessels</p>
+            <p class="font-rb text-center text-md-start">Vessels</p>
           </div>
           <div class="col-12">
-            <section class="row" id="vessels">
-              <!-- <div class="col-md-4">
-                <div class="product">
-                  <img class="img-fluid" src="https://thiscatdoesnotexist.com" alt="">
-                  <p class="mb-0">Vessel $<span id="price">2</span></p>
-                </div>
-              </div> -->
-            </section>
+            <section class="row" id="vessels"></section>
           </div>
           <!-- Ice Cream -->
           <div class="col-12 mt-3">
-            <p class="font-rb">Ice Cream</p>
+            <p class="font-rb text-center text-md-start">Ice Cream</p>
           </div>
           <div class="col-12">
-            <section class="row" id="ice-cream">
-              <!-- <div class="col-md-4">
-                <div class="product">
-                  <img class="img-fluid" src="https://thiscatdoesnotexist.com" alt="">
-                  <p class="mb-0">Ice Cream $<span id="price">2</span></p>
-                </div>
-              </div> -->
-            </section>
+            <section class="row" id="ice-cream"></section>
           </div>
           <div class="col-md-4">
           </div>
